--- a/common/style.css
+++ b/common/style.css
@@ -24,6 +24,23 @@ body, html {
     top: 20px;
 }
 
+.popUp {
+    position: fixed;
+    left: 200px;
+    top: 100px;
+    color: rgb(255, 187, 0);
+    background: rgba(0, 0, 0, 0.404); 
+}
+
+.coins {
+    position: fixed;
+    left: 200px;
+    top: 50px;
+    color: rgba(255, 187, 0, 0.699);
+    background: rgba(0, 0, 0, 0.404); 
+    padding: 5px 5px;
+}
+
 a.back {
     display: block;
     padding: 5px 10px;
